--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "dotbot"]
 	path = dotbot
-	url = git@github.com:anishathalye/dotbot.git
+	url = https://github.com/anishathalye/dotbot
 [submodule "dotbot-brewfile"]
 	path = dotbot-brewfile
-	url = git@github.com:sobolevn/dotbot-brewfile.git
+	url = https://github.com/sobolevn/dotbot-brewfile
