--- a/config/alacritty.toml
+++ b/config/alacritty.toml
@@ -9,10 +9,10 @@ padding = { x = 6, y = 6 }
 
 [font]
 size = 15.0
-normal = { family = "Dank Mono" }
-bold = { family = "Dank Mono" }
-italic = { family = "Dank Mono" }
-bold_italic = { family = "Dank Mono" }
+normal = { family = "FiraCode Nerd Font" }
+bold = { family = "FiraCode Nerd Font" }
+italic = { family = "FiraCode Nerd Font" }
+bold_italic = { family = "FiraCode Nerd Font" }
 glyph_offset = { x = 0, y = 1 }
 offset = { x = 0, y = 1 }
 
