chore(git): ignore Claude Code local install directories
- Add config/claude/local/ for Node.js installation files
- Add config/claude/shell-snapshots/ for temporary shell state backups
- These contain environment-specific data that shouldn't be versioned

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 config/claude/projects/
 config/claude/todos/
 
+# Claude Code local installation and shell snapshots
+config/claude/local/
+config/claude/shell-snapshots/
+
 # macOS system files
 .DS_Store
 .DS_Store?
