feat(claude): add settings template and update gitignore
- Add settings.json.template with Vertex AI configuration
- Update .gitignore to exclude actual settings.json file
- Clean up gitignore comment for Claude Code data

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-# Personal Claude Code data - contains conversation history and todos
+# Personal Claude Code data
 config/claude/projects/
 config/claude/todos/
+config/claude/settings.json
 
 # Claude Code local installation and shell snapshots
 config/claude/local/
