feat(helix): restructure configuration with dedicated directory
- Replace single config/helix.toml with config/helix/ directory structure
- Add config.toml with enhanced editor settings
- Add languages.toml for language-specific configurations
- Add dprint.json for markdown formatting configuration
- Update terminal.yml to symlink helix directory instead of single file
- Add dprint.json symlink to dotbot configuration

--- a/steps/terminal.yml
+++ b/steps/terminal.yml
@@ -24,6 +24,7 @@
     ~/.hushlogin: config/hushlogin
     ~/.zplugrc: config/zplugrc
     ~/.tmux.conf: config/tmux.conf
+    ~/.dprint.json: config/dprint.json
 
     # Git:
     ~/.gitconfig: config/gitconfig
@@ -31,9 +32,9 @@
     ~/.gitattributes_global: config/gitattributes
 
     # Editors:
-    ~/.config/helix/config.toml:
-      create: true
-      path: config/helix.toml
+    ~/.config/helix:
+      force: true
+      path: config/helix
 
     # Claude Code:
     ~/.claude:
