refactor: simplify dotfiles installation architecture
- Replace 172-line install script with 24-line version
- Consolidate 3 separate dotbot YAML files into single install.yml
- Remove elaborate backup system and sync scripts
- Remove unused shell command functions
- Streamline installation process to use single dotbot configuration

This moves from over-engineered complexity to simple, maintainable setup.

--- a/install.yml
+++ b/install.yml
@@ -1,14 +1,22 @@
 ---
 
+# Create directories
+- create:
+    - ~/notes
+    - ~/workspace
+    - ~/.private
+
+# Clean home directory
 - clean: ['~']
 
-# See https://ohmyz.sh
+# Install Oh-My-Zsh
 - shell:
   - command: sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" || true
     description: Install Oh-My-Zsh
     stdout: true
     stderr: true
 
+# Symlink configuration files
 - link:
     # Terminal
     ~/.shell:
@@ -41,3 +49,10 @@
       force: true
       path: config/claude
 
+# Install dependencies
+- brewfile:
+    file: Brewfile
+    no-upgrade: true
+    stdout: true
+    stderr: true
+    include: ['tap', 'brew', 'cask', 'mas']
