feat(config): add gcloud configurations support
- Add gitignore patterns for gcloud configurations
- Include example config file for reference
- Ignore personal gcloud configs while allowing examples

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ Thumbs.db
 
 # Private configuration files
 .private/
+config/gcloud-configs/*
+!config/gcloud-configs/config_example
 
 # Temporary files
 *.tmp
