refactor(pkg): migrate CLI tools from Homebrew to webi
Migrate modern CLI tools from Brewfile to Webifile for better
portability and reduced system dependencies. Integrate webi
installation into dotbot workflow.

- Move bat, fzf, lsd, gh, delta, jq, k9s, kubectx, terraform to webi
- Remove node, nvm, pipx, and other heavy packages from Brewfile
- Add webi installation step to install.yml
- Keep core system packages in Homebrew (databases, languages)

--- a/install.yml
+++ b/install.yml
@@ -31,7 +31,6 @@
 
     ~/.hushlogin: config/hushlogin
     ~/.zplugrc: config/zplugrc
-    ~/.tmux.conf: config/tmux.conf
     ~/.dprint.json: config/dprint.json
 
     # Git:
@@ -60,3 +59,10 @@
     stdout: true
     stderr: true
     include: ["tap", "brew", "cask", "mas"]
+
+# Install webi packages
+- shell:
+    - command: ./scripts/install-webi.sh
+      description: Install packages from Webifile using webi
+      stdout: true
+      stderr: true
