chore: add package manager directories to gitignore
Add commonly used package manager directories to prevent accidental commits:
- node_modules/ (Node.js packages)
- vendor/ (PHP/Go packages)
- bower_components/ (Bower packages)
- jspm_packages/ (JSPM packages)
- .pnp/ and .pnp.js (Yarn PnP files)

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ config/gcloud-configs/*
 *.tmp
 *.swp
 *~
+
+# Package manager directories
+node_modules/
+vendor/
+.pnp/
+.pnp.js
+bower_components/
+jspm_packages/
