feat(shell): integrate Starship prompt with comprehensive configuration
Add Starship as the new cross-shell prompt replacement for spaceship:

- Add comprehensive starship.toml with consistent bracket formatting
- Configure all language and tool modules with standardized styling
- Include specialized icons for Docker, Node.js, PHP, Python, etc.
- Add battery indicator with charging/discharging status
- Set up automatic installation via dotbot in install.yml

Starship provides faster startup times and more consistent cross-shell
behavior compared to the previous spaceship prompt configuration.

--- a/install.yml
+++ b/install.yml
@@ -51,6 +51,11 @@
       force: true
       path: config/gcloud-configs
 
+    # Starship:
+    ~/.config/starship.toml:
+      force: true
+      path: config/starship.toml
+
 # Install dependencies
 - brewfile:
     file: Brewfile
