--- a/dotconfig/git/config
+++ b/dotconfig/git/config
@@ -14,7 +14,7 @@
   co = checkout
   cp = cherry-pick
   force-safe = push --force-with-lease
-  dm = "!sh -c 'echo; git diff --name-status --diff-filter=ADM origin/main...$(git rev-parse --abbrev-ref HEAD) | sed -e \"s/^A/\\x1b[32mA\\x1b[0m/\" -e \"s/^M/\\x1b[33mM\\x1b[0m/\" -e \"s/^D/\\x1b[31mD\\x1b[0m/\"; echo; echo -e \"\\x1b[94mPaths changed: $(git diff --name-status --diff-filter=ADM origin/main...$(git rev-parse --abbrev-ref HEAD) | wc -l)\\x1b[0m\"'"
+	dm = "!sh -c 'git diff --name-status --diff-filter=ADM origin/$(git remote show origin | sed -n \"/HEAD branch/s/.*: //p\")...$(git rev-parse --abbrev-ref HEAD) | sed -e \"s/^A/\\x1b[32mA\\x1b[0m/\" -e \"s/^M/\\x1b[33mM\\x1b[0m/\" -e \"s/^D/\\x1b[31mD\\x1b[0m/\"; echo; echo -e \"\\x1b[94mPaths changed: $(git diff --name-status --diff-filter=ADM origin/$(git remote show origin | sed -n \"/HEAD branch/s/.*: //p\")...$(git rev-parse --abbrev-ref HEAD) | wc -l)\\x1b[0m\"'"
   graph = log --oneline --graph --decorate --all
   last = log -1 HEAD --stat
   ld = log --pretty=format:"%C(yellow)%h\\ %C(green)%ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short --graph
