feat(nvim): add neovim editor configuration and tooling
Add Neovim as an alternative editor option with comprehensive configuration:

- Add neovim and tree-sitter-cli to Brewfile for installation
- Create minimal neovim config with lazy.nvim plugin manager
- Configure plugins: everforest theme, lualine, bufferline, treesitter,
  indent-blankline, gitsigns, LSP (lua_ls, ts_ls, pyright, rust_analyzer),
  nvim-cmp for completion, telescope for fuzzy finding, which-key
- Add Taskfile tasks for symlinking, unlinking, and verifying nvim config
- Use native vim.lsp.config for Neovim 0.11+ LSP configuration
- Enable inlay hints and standard LSP keymaps (gd, gr, K, leader-ca, etc)

The configuration mirrors Helix settings where applicable (theme, statusline
sections, inlay hints) for consistency across editors.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -53,6 +53,7 @@ tasks:
       - task: link:zsh
       - task: link:git
       - task: link:helix
+      - task: link:nvim
       - task: link:claude
       - task: link:mise
       - task: link:starship
@@ -82,6 +83,13 @@ tasks:
     cmds:
       - mkdir -p {{.XDG_CONFIG_HOME}}/helix
       - ln -sf {{.DOTFILES_DIR}}/dotconfig/helix/* {{.XDG_CONFIG_HOME}}/helix/
+
+  link:nvim:
+    desc: Symlink neovim configuration
+    cmds:
+      - mkdir -p {{.XDG_CONFIG_HOME}}/nvim/lua
+      - ln -sf {{.DOTFILES_DIR}}/dotconfig/nvim/init.lua {{.XDG_CONFIG_HOME}}/nvim/init.lua
+      - ln -sf {{.DOTFILES_DIR}}/dotconfig/nvim/lua/plugins {{.XDG_CONFIG_HOME}}/nvim/lua/plugins
 
   link:claude:
     desc: Symlink Claude Code configuration
@@ -138,6 +146,7 @@ tasks:
       - rm -f {{.XDG_CONFIG_HOME}}/zsh/completions.zsh
       - rm -f {{.XDG_CONFIG_HOME}}/zsh/external.zsh
       - rm -f {{.XDG_CONFIG_HOME}}/helix
+      - rm -rf {{.XDG_CONFIG_HOME}}/nvim
       - rm -f {{.XDG_CONFIG_HOME}}/starship.toml
       - rm -rf ~/.private
       - echo "Symlinks removed"
@@ -166,6 +175,10 @@ tasks:
 
           echo "=== Helix Editor ==="
           ls -la {{.XDG_CONFIG_HOME}}/helix 2>/dev/null || echo "⚠️  Helix config missing"
+          echo ""
+
+          echo "=== Neovim Editor ==="
+          ls -la {{.XDG_CONFIG_HOME}}/nvim/init.lua 2>/dev/null || echo "⚠️  Neovim config missing"
           echo ""
 
           echo "=== Claude Code ==="
