feat(wm): migrate from Rectangle to AeroSpace window manager
Add AeroSpace tiling window manager configuration and update dotfiles
setup to support it:

- Replace Rectangle with AeroSpace in Brewfile
- Add aerospace configuration with vim-style navigation (alt-hjkl)
- Configure workspace-to-monitor assignments (main: 1-7, secondary: 8-9,0)
- Set floating mode for utility apps (1Password, System Preferences, etc.)
- Add Taskfile task to symlink aerospace config during dotfiles setup
- Enable mouse-follows-focus and service mode for advanced operations

AeroSpace provides i3-like tiling behavior natively on macOS with better
workspace management and keyboard-driven workflow compared to Rectangle.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -58,6 +58,7 @@ tasks:
       - task: link:mise
       - task: link:starship
       - task: link:misc
+      - task: link:aerospace
       - task: link:private
 
   link:zsh:
@@ -116,6 +117,12 @@ tasks:
     cmds:
       - ln -sf {{.DOTFILES_DIR}}/dotconfig/dprint.json ~/.dprint.json
       - ln -sf {{.DOTFILES_DIR}}/dotconfig/editorconfig ~/.editorconfig
+
+  link:aerospace:
+    desc: Symlink aerospace configuration
+    cmds:
+      - mkdir -p {{.XDG_CONFIG_HOME}}/aerospace
+      - ln -sf {{.DOTFILES_DIR}}/dotconfig/aerospace/aerospace.toml {{.XDG_CONFIG_HOME}}/aerospace/aerospace.toml
 
   link:private:
     desc: Symlink private files (not version controlled)
