fix(wm): disable mouse-follows-focus to prevent cross-monitor workspace switching
The on-focus-changed mouse tracking feature was causing unintended workspace
switches when focus moved between monitors. Disabled to maintain stable
workspace-to-monitor assignments.

--- a/dotconfig/aerospace/aerospace.toml
+++ b/dotconfig/aerospace/aerospace.toml
@@ -13,8 +13,8 @@ accordion-padding = 30
 default-root-container-layout = 'tiles'
 default-root-container-orientation = 'auto'
 
-# Mouse follows focus
-on-focus-changed = ['move-mouse window-lazy-center']
+# Mouse follows focus (disabled: causes cross-monitor workspace switching)
+# on-focus-changed = ['move-mouse window-lazy-center']
 
 # Workspace to monitor assignment
 # Main monitor: 1-6, 0 | Secondary monitor: 7, 8, 9
