feat(tmux): add popup terminal keybinding
C-k opens a floating popup terminal at 80%x75% in the current pane's directory.

--- a/dotconfig/tmux/tmux.conf
+++ b/dotconfig/tmux/tmux.conf
@@ -69,3 +69,6 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Quick popup terminal
+bind C-k display-popup -E -w 80% -h 75% -d "#{pane_current_path}"
