--- a/dotconfig/aerospace/aerospace.toml
+++ b/dotconfig/aerospace/aerospace.toml
@@ -1,6 +1,12 @@
 # AeroSpace configuration
 # See: https://nikitabobko.github.io/AeroSpace/guide
 
+config-version = 2
+
+after-startup-command = [
+  'exec-and-forget /opt/homebrew/bin/borders active_color=0xFF1B03A3 inactive_color=0xff000000 width=5.0'
+]
+
 # Start AeroSpace at login
 start-at-login = true
 
@@ -8,25 +14,67 @@ start-at-login = true
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
 
-# Layout settings - no gaps (user preference)
+# Layout settings - no gaps
 accordion-padding = 30
 default-root-container-layout = 'tiles'
 default-root-container-orientation = 'auto'
 
-# Mouse follows focus (disabled: causes cross-monitor workspace switching)
-# on-focus-changed = ['move-mouse window-lazy-center']
+# Mouse follows focus
+on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
+
+# Turn off "Hide application"
+automatically-unhide-macos-hidden-apps = true
+
+# Persistent workspaces (always visible even when empty)
+persistent-workspaces = ['T', 'W', 'M', 'S', 'Z', 'P', '9']
 
 # Workspace to monitor assignment
 [workspace-to-monitor-force-assignment]
-1 = 'main'
-2 = 'main'
+# Secondary (external) - primary work screen
+T = ['secondary', 'main']
+W = ['secondary', 'main']
+M = ['secondary', 'main']
+1 = ['secondary', 'main']
+2 = ['secondary', 'main']
 3 = ['secondary', 'main']
-4 = ['secondary', 'main']
-5 = ['secondary', 'main']
-6 = ['secondary', 'main']
-7 = ['secondary', 'main']
-8 = ['secondary', 'main']
-9 = ['secondary', 'main']
+# Main (MacBook) - comms & media
+S = 'main'
+Z = 'main'
+P = 'main'
+9 = 'main'
+
+# App workspace assignments
+[[on-window-detected]]
+if.app-id = 'com.mitchellh.ghostty'
+run = 'move-node-to-workspace T'
+
+[[on-window-detected]]
+if.app-id = 'com.google.Chrome'
+run = 'move-node-to-workspace W'
+
+[[on-window-detected]]
+if.app-id = 'com.google.Chrome.app.fmgjjmmmlfnkbppncabfkddbjimcfncm'
+run = 'move-node-to-workspace M'
+
+[[on-window-detected]]
+if.app-id = 'com.google.Chrome.app.kjbdgfilnfhdoflbpgamdcdgpehopbep'
+run = 'move-node-to-workspace M'
+
+[[on-window-detected]]
+if.app-id = 'com.tinyspeck.slackmacgap'
+run = 'move-node-to-workspace S'
+
+[[on-window-detected]]
+if.app-id = 'us.zoom.xos'
+run = 'move-node-to-workspace Z'
+
+[[on-window-detected]]
+if.app-id = 'org.mozilla.firefox'
+run = 'move-node-to-workspace P'
+
+[[on-window-detected]]
+if.app-id = 'com.apple.Music'
+run = 'move-node-to-workspace 9'
 
 # Apps that should float (not tile)
 [[on-window-detected]]
@@ -49,6 +97,10 @@ run = 'layout floating'
 if.app-id = 'eu.virtualtraining.rouvy.mac'
 run = ['layout floating', 'move-node-to-workspace 1']
 
+# Catch-all: tile and balance any unrecognised app
+[[on-window-detected]]
+run = ['layout tiling', 'balance-sizes']
+
 # Default keybindings (Alt/Option as main modifier)
 [mode.main.binding]
 # Focus navigation (vim-style)
@@ -63,41 +115,46 @@ alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
 
-# Workspace switching (1-9)
+# Named workspaces
+alt-t = 'workspace T'
+alt-w = 'workspace W'
+alt-m = 'workspace M'
+alt-s = 'workspace S'
+alt-z = 'workspace Z'
+alt-p = 'workspace P'
+
+# Numbered workspaces (ad-hoc)
 alt-1 = 'workspace 1'
 alt-2 = 'workspace 2'
 alt-3 = 'workspace 3'
-alt-4 = 'workspace 4'
-alt-5 = 'workspace 5'
-alt-6 = 'workspace 6'
-alt-7 = 'workspace 7'
-alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
 
 # Move window to workspace
+alt-shift-t = 'move-node-to-workspace T'
+alt-shift-w = 'move-node-to-workspace W'
+alt-shift-m = 'move-node-to-workspace M'
+alt-shift-s = 'move-node-to-workspace S'
+alt-shift-z = 'move-node-to-workspace Z'
+alt-shift-p = 'move-node-to-workspace P'
 alt-shift-1 = 'move-node-to-workspace 1'
 alt-shift-2 = 'move-node-to-workspace 2'
 alt-shift-3 = 'move-node-to-workspace 3'
-alt-shift-4 = 'move-node-to-workspace 4'
-alt-shift-5 = 'move-node-to-workspace 5'
-alt-shift-6 = 'move-node-to-workspace 6'
-alt-shift-7 = 'move-node-to-workspace 7'
-alt-shift-8 = 'move-node-to-workspace 8'
 alt-shift-9 = 'move-node-to-workspace 9'
 
 # Focus monitor (move between screens)
 alt-tab = 'focus-monitor next'
 alt-shift-tab = 'focus-monitor prev'
 
-# Move window to monitor
-alt-shift-m = 'move-node-to-monitor next'
+# Resize
+alt-minus = 'resize smart -75'
+alt-equal = 'resize smart +75'
+alt-shift-equal = 'balance-sizes'
 
 # Layout toggles
 alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
-alt-f = 'fullscreen'
 
-# Enter service mode for resize
+# Enter service mode
 alt-shift-semicolon = 'mode service'
 
 [mode.service.binding]
