--- a/dotconfig/tmux/tmux.conf
+++ b/dotconfig/tmux/tmux.conf
@@ -22,12 +22,13 @@ setw -g pane-base-index 1            # Start pane numbering at 1
 set -g renumber-windows on           # Renumber windows when one is closed
 set -g set-titles on                 # Set terminal title
 set -s escape-time 0                 # No delay for escape key
+set -g focus-events on               # Pass focus events to apps (for autoread)
 
 # ─────────────────────────────────────────────────────────────────────────────
 # Status bar
 # ─────────────────────────────────────────────────────────────────────────────
 
-set -g status-position bottom
+set -g status-position top
 set -g status-interval 60            # Update every 60 seconds
 
 # Minimal styling
@@ -72,3 +73,8 @@ bind -r L resize-pane -R 5
 
 # Quick popup terminal
 bind C-k display-popup -E -w 80% -h 75% -d "#{pane_current_path}"
+
+# Window switching
+bind C-a last-window                         # Toggle last window with C-a C-a
+bind -n C-S-Left previous-window             # Previous window (no prefix)
+bind -n C-S-Right next-window                # Next window (no prefix)
