feat(dotfiles): add tmux pane push/pull bindings and mc shell function
Add > / < tmux bindings for moving panes between windows, and an mc()
wrapper in functions.zsh for convenient Mission Control invocation.

--- a/dotconfig/tmux/tmux.conf
+++ b/dotconfig/tmux/tmux.conf
@@ -74,6 +74,10 @@ bind -r L resize-pane -R 5
 # Quick popup terminal
 bind C-k display-popup -E -w 80% -h 75% -d "#{pane_current_path}"
 
+# Pane push/pull between windows
+bind > command-prompt -p "push pane to window:" "join-pane -t '%%'"
+bind < command-prompt -p "pull pane from (window.pane):" "join-pane -s '%%'"
+
 # Window switching
 bind C-a last-window                         # Toggle last window with C-a C-a
 bind -n C-S-Left previous-window             # Previous window (no prefix)
